src/test/deca/context/invalid/created/object/equals_A_int.deca
// Description :
//    test equals entre un A et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
A a;
int b;
int c = a.equal(b);
}
